--- a/foundation/index.html
+++ b/foundation/index.html
@@ -64,7 +64,7 @@ layout: default_foundation
 <marker></marker>
 <li><a href="https://github.com/sile-typesetter/sile/issues/1265#issuecomment-1108457196">SILE OpenType FeatureVariations Support</a><bux>($350)</bux> (<em><abbr title="Offered 2022-04-25.">completed</abbr></em>)<br/><span>Awardee: Khaled Hosny</span></li>
 <marker></marker>
-<li><span>MFEKglif Additional Pens API (<em>completed</em>)</span><br/><span>Awardee: Matthew Blanchard</span><small><p class="extended-comment">This work was PR'd to the relevant MFEK repositories in 2022 but not merged into <tt>v2</tt> until January 2023 and will not be merged into <tt>master</tt> by mutual consent until some time in 2023.</p></small></li>
+<li><span>MFEKglif Additional Pens API (<em>completed</em>)</span><br/><span>Awardee: Matthew Blanchard</span><p class="extended-comment"><small>This work was PR'd to the relevant MFEK repositories in 2022 but not merged into <tt>v2</tt> until January 2023 and will not be merged into <tt>master</tt> by mutual consent until some time in 2023.</small></p></li>
 <marker></marker>
 <li><span>Upkeep of the Fediverse instance <a href="https://howlr.me">howlr.me</a> (<em>completed</em>)</span><br/><span>Awardee: Lycanthropy LLC</span></li>
 <marker></marker>
@@ -74,7 +74,7 @@ layout: default_foundation
       <ul class="grant-notes"><li><dagger></dagger><span>Stretch goal (<em>completed</em>).</span></li></ul>
 </li>
 <marker></marker>
-<li><s><span>System administration work: <a href="https://mfek.jitsi.org">Jitsi Meet instance</a>; Mastodon←→Twitter bridge (<em>in progress</em>)</span><br/><span>Awardee: Cleveland Digital Self Defense Collective</span></s><small><p class="extended-comment">Due to an executive error, this grant was listed <em>prematurely</em>. It may be awarded in 2023, but was never paid out and circumstances of Naia Ōkami / at Howlr made awarding it in 2022 impossible. Nonwithstanding the foregoing, the MFEK Foundation Inc. owes CDSDC <em>something</em>, so barring Armageddon they will receive some grant in 2023 if they still want one.</p></small></li>
+<li><s><span>System administration work: <a href="https://mfek.jitsi.org">Jitsi Meet instance</a>; Mastodon←→Twitter bridge (<em>in progress</em>)</span><br/><span>Awardee: Cleveland Digital Self Defense Collective</span></s><p class="extended-comment"><small>Due to an executive error, this grant was listed <em>prematurely</em>. It may be awarded in 2023, but was never paid out and circumstances of Naia Ōkami / at Howlr made awarding it in 2022 impossible. Nonwithstanding the foregoing, the MFEK Foundation Inc. owes CDSDC <em>something</em>, so barring Armageddon they will receive some grant in 2023 if they still want one.</small></p></li>
 <marker></marker>
 <li><span><a href="/misc/four-freedoms.html">The Four Freedoms of Free Software</a> artwork (<em>completed</em>)</span><br/><span>Awardee: LAV (@<a href="https://twitter.com/lilblucat">lilblucat</a>)</span></li>
 </ol>
